Text change updated

--- a/public/app/partials/evezplace/browse/store/product_detail.html
+++ b/public/app/partials/evezplace/browse/store/product_detail.html
@@ -107,7 +107,7 @@
                         <span class="fa fa-shopping-cart"></span> Add To Cart</a>
                     <a ng-if="isAlreadyAddedToCart" class="btn btn-default btn-block btn-lg">
                         <span class="fa fa-shopping-cart"></span> Already added to cart</a>
-                    <a ng-click="buyProduct(productSkuVariants)" class="btn btn-primary btn-block btn-lg">Buy</a>
+                    <a ng-click="buyProduct(productSkuVariants)" class="btn btn-primary btn-block btn-lg">Express Buy</a>
                     <a class="btn btn-primary btn-block btn-lg"
                        ng-click="openRequestInfoForm(productDetails.id)">Enquiry/Request for
                         Information (RFI)</a>
