issue fixes and logo changes

--- a/public/app/partials/admin/driverList.html
+++ b/public/app/partials/admin/driverList.html
@@ -44,6 +44,7 @@
                             </span>
                             
                         </td>
+                         <tr ng-if="getUser.length <= 0" ><td colspan="8"><b style="color:red">Sorry, there is no registered driver in our record.</b></td></tr>
                 </table>
                 <uib-pagination ng-show="getUser.length > 0" total-items="userPagination.total"
                                 ng-model="currentUserPage"
