--- a/public/app/partials/admin/home.html
+++ b/public/app/partials/admin/home.html
@@ -7,7 +7,7 @@
                 <!-- flight section -->
                 <div class="bhoechie-tab-content active">
                 	   <div class="col-md-12">
-			                <p style="text-align:justify;"><h4 style="color:#3F799B"><br>Welcome to V-Drive admin panel. <br><br>You can register the driver, update the driver profile, delete the driver, configure the drive rates and view the booking reports.</h4></p>
+			                <p style="text-align:justify;"><h4 style="color:#0082B9"><br>Welcome to V-Drive admin panel. <br><br>You can register the driver, update the driver profile, delete the driver, configure the drive rates and view the booking reports.</h4></p>
 							<BR>
 							<div class="class="col-lg-12 col-md-12 col-sm-12 container home-sale-section custom-home-sale-section">
 							    <div class="row">
@@ -56,7 +56,7 @@
 							<div>
 			                    <div class="col-md-12">
 			                    <br><BR>
-			                        <center><p style="text-align:justify;"><h3 style="color:#3F799B">!! YOU CAN HIRE A PROFESSIONAL DRIVER FOR YOUR CAR EVERYDAY !!</h3></p></center><br>
+			                        <center><p style="text-align:justify;"><h3 style="color:#0082B9"><b>!! YOU CAN HIRE A PROFESSIONAL DRIVER FOR YOUR CAR EVERYDAY !!</b></h3></p></center><br>
 			                    </div>
 			                </div>
 			            </div>
