--- a/public/app/partials/admin/configurations.html
+++ b/public/app/partials/admin/configurations.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <span us-spinner="{radius:6, width:2, length: 2,color: '#e50880'}" spinner-key="spinner-1" spinner-start-active="true">
-    </span>
+   <!--  <span us-spinner="{radius:6, width:2, length: 2,color: '#e50880'}" spinner-key="spinner-1" spinner-start-active="true">
+    </span> -->
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-8 col-xs-9 bhoechie-tab-container">
             <div class="col-lg-12 col-md-12 col-sm-12 bhoechie-tab">
