--- a/public/app/partials/top-menu.html
+++ b/public/app/partials/top-menu.html
@@ -7,8 +7,8 @@
             <div class="col-md-8" style="padding-top:60px;">
             	<div class="col-md-2 btn btn-menu-primary"><a href="#/" style="height:auto;padding:0px;color:#CBFFFF;text-decoration: none;">HOME</a></div>
                 <div class="col-md-3 btn btn-menu-primary"><a href="#driverlist" style="height:auto;padding:0px;color:#CBFFFF;text-decoration: none;">DRIVER REGISTRATION</a></div>
-                <div class="col-md-3 btn btn-menu-primary"><a  href="#bookingreports" style="height:auto;padding:0px;color:#CBFFFF;text-decoration: none;">BOOKING REPORTS</a></div>
-                <div class="col-md-3 btn btn-menu-primary"><a  href="#configurations" style="height:auto;padding:0px;color:#CBFFFF;text-decoration: none;">CONFIGURATIONS</a></div>
+                <div class="col-md-3 btn btn-menu-primary"><a  href="#bookingrequest" style="height:auto;padding:0px;color:#CBFFFF;text-decoration: none;">BOOKING REQUEST</a></div>
+                <div class="col-md-3 btn btn-menu-primary"><a  href="#reports" style="height:auto;padding:0px;color:#CBFFFF;text-decoration: none;">REPORTS</a></div>
             </div>
         </div>
 	</div>
